src/css/custom.scss
@import "colors";
@import "default";

html[data-theme="dark"] {
  background: var(--click-color-background);
  background-attachment: fixed;
}

body {
  font-size: var(--default-font);
  line-height: var(--default-line-height);
  font-family: var(--ifm-font-family-base);
}

.navbar-sidebar {
  background: inherit;
}

/* Attemps to fix active link on KB page in dark mode */
.sidebarItemLink_node_modules-\@docusaurus-theme-classic-lib-theme-BlogSidebar-Desktop-styles-module .sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-theme-BlogSidebar-Desktop-styles-module {
  color: #e2e3e7 !important;
}
.sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-theme-BlogSidebar-Desktop-styles-module {
  color: #E2E3E7 !important;
}

.sidebar_node_modules-\@docusaurus-theme-classic-lib-theme-BlogSidebar-Desktop-styles-module  {
  padding-right: 1rem;
}
/* Modify the prev and next links */
.pagination-nav__ {
  &link {
    border: none;
    background-color: var(--click-color-note-background);
  }

  &sublabel {
    font-size: 0.75rem; /* 12px */
    line-height: 1rem; /* 16px */
    font-weight: 700;
    text-transform: uppercase;
    color: var(--click-color-text-muted);
  }

  &label {
    font-size: 1rem; /* 16px */
    line-height: 1.5rem; /* 24px */
    font-weight: 600;
    color: var(--click-color-text);

    &::after {
      content: none;
    }
  }
}

/* keep the navbar from disappearing when scrolling */
.navbar--fixed-top {
  position: fixed;
  width: 100%;
}
/* Rich's attempt to add scrollbar to nav */
.sidebar_mhZE {
  position: fixed !important;
  padding-bottom: 33px;
}
/* Make the navbar move with the page */
/* .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
  max-height: unset !important;
}
*/

/* In the knowledgebase, the top nav sits on top of the article. This moves it down */
.margin-bottom--xl {
  margin-top: 60px;
}
.hero__title, .title_f1Hy {
  font-size: 32px !important;
}
.title_node_modules-\@docusaurus-theme-classic-lib-theme-BlogPostItem-Header-Title-styles-module {
  font-size: 32px !important;
  border-top: 2px solid black;
}

.sidebarViewport_Xe31 {
  max-height: unset !important;
}

/* give some space for the breadcrumbs */
.padding-top--md, .padding-vert--md {
  padding-top: var(--ifm-navbar-height) !important;
}

/* Docsearch from Algolia */
[data-theme='light'] .DocSearch mark {
  --docsearch-highlight-color: black;
}

[data-theme='dark'] .DocSearch mark {
  --docsearch-highlight-color: white;
}

[data-theme='dark'] .theme-admonition-tip.alert--success .alert-content  {
  background-color: rgba(255,255,255,0.1);
}

[data-theme='dark'] .DocSearch-Hit-source {
  color: white;
}

.table-of-contents {
  font-size: inherit;
}
/* right hand table of contents */
.table-of-contents__link {
  color: var(--ifm-toc-link-color);
}

.table-of-contents__link--active {
  color: var(--ifm-toc-link-color--active);
}

/* Remove the filter, which was changing the
 * color of the > in dark mode */
.menu__caret:before {
  filter: none !important;
  padding-right: var(--doc-menu-caret-right-padding);
}

.menu__link--sublist-caret:after {
  padding-right: var(--doc-menu-caret-right-padding);
}

.menu__caret {
  padding-top: 0px !important;
  padding-bottom: 0px !important;

}

.navbar__logo {
  height: 40px;

  img {
    height: inherit;
    width: inherit;
    /* override the normal white background color
     * and remove the drop shadow filter for img
     * when it is inside  of a .navbar__logo
     * or in the columns on the doc homepage */
    filter: none;
    background-color: transparent;
  }
}

/* this is for the docs homepage, no filter
 * and add a background color. set the width
 * on the images in the row. */
.col--4 img {
  filter: none;
  background-color: white;
  max-width: 200px;
}

.theme-doc-sidebar-container img {
  filter: none;
  background-color: transparent;
}

.navbar__title {
  font-family: Hind Siliguri, sans-serif;
  font-size: 18px;
  line-height: 21px;
}

.hero--primary {
  /*background-image: url('../../static/img/image_mountain.png'); */
  background-color: transparent;
  background-position: center center;
  background-size: cover;
  opacity: 1;
  transition: opacity 1.2s, transform 1.6s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}

.hero {
  --ifm-button-font-weight: 700;
}
.title_node_modules-\@docusaurus-theme-classic-lib-theme-BlogPostItem-Header-Title-styles-module {
  font-size: 2rem !important;
}
article[itemprop="blogPost"] {
  margin-top: 2rem;
}

.adopters-table {
  width: 1150px;
}

/* the buttons on the hompage stack on cell phones - this seems to fix it */
.buttons_src-pages-docs-index-module {
  display: flow-root !important;
}

.buttons_src-pages-index-module {
  display: block !important;
}

.buttons_s0t3 {
  display: flow-root !important;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

html {
  font-size: 16px;
}

code {
  font-weight: bold;
  background-color: var(--ifm-code-background) !important;
  span {
    font-style: normal !important;
  }
}

.markdown h1:first-child {
  font-size: 32px !important;
}

/* this is for breadcrumbs, except the current page (far right) */
/* the current page is the `--active` one next */
.breadcrumbs__link {
  padding: 0;
  color: var(--click-color-text-muted);
  background-color: transparent;
  font-size: inherit;
}

.breadcrumbs__text--active {
  color: var(--click-color-text);
  background-color: transparent;
  font-size: inherit;
}

.breadcrumbs__item {
  &:not(:last-child):after {
    font-size: inherit;
    content: '\/' !important;
  }

  &--active {
    font-weight: 600;
  }
}
/* ... */

